# csci361-lab-group-4-vms

./: CNAME  README.md  temp_dbs.py
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
backend/alembic/versions/: 37e9b039983c_create_user_table.py  9bd048e70a10_create_user_table.py
backend/src/: config.py  containers.py  main.py
backend/src/admin/: router.py  service.py
backend/src/auth/: auth_bearer.py  router.py  service.py
backend/src/database/: database.py  defaultAccounts.py  models.py  repositories.py  schemas.py
backend/src/driver/: router.py  service.py
backend/src/fueling_person/: router.py  service.py
backend/src/maintaince_person/: router.py  service.py
backend/src/tasks/driver_task/: router.py  service.py
backend/src/tasks/fueling_task/: router.py  service.py
backend/src/tasks/maintenance_job/: router.py  service.py
backend/src/tasks/maintenance_task/: router.py  service.py
backend/src/user/: router.py  service.py
backend/src/vehicle/: router.py  service.py
